--- a/Animal Merchandise.html
+++ b/Animal Merchandise.html
@@ -30,9 +30,11 @@
         <h1>WELCOME TO ANIMAL MERCHANDISE</h1><br>
         <h2>View our limited edition t-shirts, caps, bags and more!</h2>
         <main>
+            <!-- T-Shirt -->
             <div id="image1">
                 <h3>T-Shirt</h3>
                 <div class="options">
+                        <!-- T-Shirt Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
                             <option value="0"></option>
@@ -42,6 +44,7 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                         </select>
+                        <!-- T-Shirt Size selection-->
                         &nbsp; Size
                         <select class="size" size="1">
                             <option value="0"></option>
@@ -52,6 +55,7 @@
                             <option value="XL">XL</option>
                             <option value="XXL">XXL</option>
                         </select>
+                        <!-- T-Shirt Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
                             <option value="0"></option>
@@ -64,9 +68,11 @@
                         <br><br><button type="submit" id="addtocart1"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
+            <!-- Tote Bag -->
             <div id="image2">
                 <h3>Tote Bag</h3>
                 <div class="options">
+                        <!-- Tote Bag Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
                             <option value="0"></option>
@@ -76,6 +82,7 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                         </select>
+                        <!-- Tote Bag Size selection-->
                         &nbsp; Size
                         <select class="size" size="1">
                             <option value="0"></option>
@@ -83,6 +90,7 @@
                             <option value="M">M</option>
                             <option value="L">L</option>
                         </select>
+                        <!-- Tote Bag Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
                             <option value="0"></option>
@@ -95,9 +103,11 @@
                         <br><br><button type="submit" id="addtocart2"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
+            <!-- Cap -->
             <div id="image3">
                 <h3>Cap</h3>
                 <div class="options">
+                        <!-- Cap Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
                             <option value="0"></option>
@@ -107,6 +117,7 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                         </select>
+                        <!-- Cap Size selection-->
                         &nbsp; Size
                         <select class="size" size="1">
                             <option value="0"></option>
@@ -114,6 +125,7 @@
                             <option value="M">M</option>
                             <option value="L">L</option>
                         </select>
+                        <!-- Cap Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
                             <option value="0"></option>
@@ -126,9 +138,11 @@
                         <br><br><button type="submit" id="addtocart3"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
+            <!-- Apron -->
             <div id="image4">
                 <h3>Apron</h3>
                 <div class="options">
+                        <!-- Apron Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
                             <option value="0"></option>
@@ -138,6 +152,7 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                         </select>
+                        <!-- Apron Size selection-->
                         &nbsp; Size
                         <select class="size" size="1">
                             <option value="0"></option>
@@ -148,6 +163,7 @@
                             <option value="XL">XL</option>
                             <option value="XXL">XXL</option>
                         </select>
+                        <!-- Apron Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
                             <option value="0"></option>
@@ -160,9 +176,11 @@
                         <br><br><button type="submit" id="addtocart4"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
+            <!-- Baby Blanket -->
             <div id="image5">
                 <h3>Baby Blanket</h3>
                 <div class="options">
+                        <!-- Baby Blanket Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
                             <option value="0"></option>
@@ -172,6 +190,7 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                         </select>
+                        <!-- Baby Blanket Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
                             <option value="0"></option>
@@ -184,9 +203,11 @@
                         <br><br><button type="submit" id="addtocart5"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
+            <!-- Pillow -->
             <div id="image6">
                 <h3>Pillow</h3>
                 <div class="options">
+                        <!-- Pillow Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
                             <option value="0"></option>
@@ -196,6 +217,7 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                         </select>
+                        <!-- Pillow Size selection-->
                         &nbsp; Size
                         <select class="size" size="1">
                             <option value="0"></option>
@@ -203,6 +225,7 @@
                             <option value="M">M</option>
                             <option value="L">L</option>
                         </select>
+                        <!-- Pillow Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
                             <option value="0"></option>
@@ -215,9 +238,11 @@
                         <br><br><button type="submit" id="addtocart6"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
+            <!-- Grocery Bag -->
             <div id="image7">
                 <h3>Grocery Bag</h3>
                 <div class="options">
+                        <!-- Grocery Bag Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
                             <option value="0"></option>
@@ -227,6 +252,7 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                         </select>
+                        <!-- Grocery Bag Size selection-->
                         &nbsp; Size
                         <select class="size" size="1">
                             <option value="0"></option>
@@ -234,6 +260,7 @@
                             <option value="M">M</option>
                             <option value="L">L</option>
                         </select>
+                        <!-- Grocery Bag Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
                             <option value="0"></option>
@@ -246,9 +273,11 @@
                         <br><br><button type="submit" id="addtocart7"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
+            <!-- Baby Bib -->
             <div id="image8">
                 <h3>Baby Bib</h3>
                 <div class="options">
+                        <!-- Baby Bib Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
                             <option value="0"></option>
@@ -258,6 +287,7 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                         </select>
+                        <!-- Baby Bib Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
                             <option value="0"></option>
@@ -270,9 +300,11 @@
                         <br><br><button type="submit" id="addtocart8"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
+            <!-- Keychain -->
             <div id="image9">
                 <h3>Keychain</h3>
                 <div class="options">
+                        <!-- Keychain Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
                             <option value="0"></option>
@@ -282,6 +314,7 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                         </select>
+                        <!-- Keychain Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
                             <option value="0"></option>
@@ -294,9 +327,11 @@
                         <br><br><button type="submit" id="addtocart9"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
+            <!-- Watch -->
             <div id="image10">
                 <h3>Watch</h3>
                 <div class="options">
+                        <!-- Watch Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
                             <option value="0"></option>
@@ -306,6 +341,7 @@
                             <option value="4">4</option>
                             <option value="5">5</option>
                         </select>
+                        <!-- Watch Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
                             <option value="0"></option>
