--- a/AnimalMerchandise.html
+++ b/AnimalMerchandise.html
@@ -2,25 +2,23 @@
 <html lang="en">
   <head>
     <title>Animal Merchandise</title>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="Images/Thumbnail.png" />
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="Images/Thumbnail.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Satisfy&family=Signika+Negative&display=swap" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <meta
       name="description"
-      content="Animal Merchandise"
-    />
+      content="Animal Merchandise">
     <meta
       name="keywords"
-      content="animal, merchandise"
-    />
-    <link rel="stylesheet" href="CSS/home.css" />
-    <link rel="stylesheet" href="CSS/footer.css" />
-    <link rel="stylesheet" href="CSS/common.css" />
-    <link rel="stylesheet" href="CSS/header.css" />
-    <link rel="stylesheet" href="CSS/Animal Merchandise.css">
+      content="animal, merchandise">
+    <link rel="stylesheet" href="CSS/home.css">
+    <link rel="stylesheet" href="CSS/footer.css">
+    <link rel="stylesheet" href="CSS/common.css">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/AnimalMerchandise.css">
   </head>
 
   <body>
@@ -37,7 +35,7 @@
                         <!-- T-Shirt Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -47,7 +45,7 @@
                         <!-- T-Shirt Size selection-->
                         &nbsp; Size
                         <select class="size" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="XS">XS</option>
                             <option value="S">S</option>
                             <option value="M">M</option>
@@ -58,14 +56,14 @@
                         <!-- T-Shirt Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="Pink">Pink</option>
                             <option value="Blue">Blue</option>
                             <option value="Gray">Gray</option>
                             <option value="White">White</option>
                             <option value="Black">Black</option>
                         </select>
-                        <br><br><button type="submit" id="addtocart1"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
+                        <br><br><button type="submit" id="addtocart1"><img src="Images/cart.png" height="30" width="30" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
             <!-- Tote Bag -->
@@ -75,7 +73,7 @@
                         <!-- Tote Bag Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -85,7 +83,7 @@
                         <!-- Tote Bag Size selection-->
                         &nbsp; Size
                         <select class="size" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="S">S</option>
                             <option value="M">M</option>
                             <option value="L">L</option>
@@ -93,14 +91,14 @@
                         <!-- Tote Bag Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="Pink">Pink</option>
                             <option value="Blue">Blue</option>
                             <option value="Gray">Gray</option>
                             <option value="White">White</option>
                             <option value="Black">Black</option>
                         </select>
-                        <br><br><button type="submit" id="addtocart2"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
+                        <br><br><button type="submit" id="addtocart2"><img src="Images/cart.png" height="30" width="30" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
             <!-- Cap -->
@@ -110,7 +108,7 @@
                         <!-- Cap Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -120,7 +118,7 @@
                         <!-- Cap Size selection-->
                         &nbsp; Size
                         <select class="size" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="S">S</option>
                             <option value="M">M</option>
                             <option value="L">L</option>
@@ -128,14 +126,14 @@
                         <!-- Cap Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="Pink">Pink</option>
                             <option value="Blue">Blue</option>
                             <option value="Gray">Gray</option>
                             <option value="White">White</option>
                             <option value="Black">Black</option>
                         </select>
-                        <br><br><button type="submit" id="addtocart3"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
+                        <br><br><button type="submit" id="addtocart3"><img src="Images/cart.png" height="30" width="30" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
             <!-- Apron -->
@@ -145,7 +143,7 @@
                         <!-- Apron Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -155,7 +153,7 @@
                         <!-- Apron Size selection-->
                         &nbsp; Size
                         <select class="size" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="XS">XS</option>
                             <option value="S">S</option>
                             <option value="M">M</option>
@@ -166,14 +164,14 @@
                         <!-- Apron Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="Pink">Pink</option>
                             <option value="Blue">Blue</option>
                             <option value="Gray">Gray</option>
                             <option value="White">White</option>
                             <option value="Black">Black</option>
                         </select>
-                        <br><br><button type="submit" id="addtocart4"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
+                        <br><br><button type="submit" id="addtocart4"><img src="Images/cart.png" height="30" width="30" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
             <!-- Baby Blanket -->
@@ -183,7 +181,7 @@
                         <!-- Baby Blanket Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -193,14 +191,14 @@
                         <!-- Baby Blanket Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="Pink">Pink</option>
                             <option value="Blue">Blue</option>
                             <option value="Gray">Gray</option>
                             <option value="White">White</option>
                             <option value="Black">Black</option>
                         </select>
-                        <br><br><button type="submit" id="addtocart5"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
+                        <br><br><button type="submit" id="addtocart5"><img src="Images/cart.png" height="30" width="30" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
             <!-- Pillow -->
@@ -210,7 +208,7 @@
                         <!-- Pillow Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -220,7 +218,7 @@
                         <!-- Pillow Size selection-->
                         &nbsp; Size
                         <select class="size" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="S">S</option>
                             <option value="M">M</option>
                             <option value="L">L</option>
@@ -228,14 +226,14 @@
                         <!-- Pillow Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="Pink">Pink</option>
                             <option value="Blue">Blue</option>
                             <option value="Gray">Gray</option>
                             <option value="White">White</option>
                             <option value="Black">Black</option>
                         </select>
-                        <br><br><button type="submit" id="addtocart6"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
+                        <br><br><button type="submit" id="addtocart6"><img src="Images/cart.png" height="30" width="30" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
             <!-- Grocery Bag -->
@@ -245,7 +243,7 @@
                         <!-- Grocery Bag Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -255,7 +253,7 @@
                         <!-- Grocery Bag Size selection-->
                         &nbsp; Size
                         <select class="size" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="S">S</option>
                             <option value="M">M</option>
                             <option value="L">L</option>
@@ -263,14 +261,14 @@
                         <!-- Grocery Bag Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="Pink">Pink</option>
                             <option value="Blue">Blue</option>
                             <option value="Gray">Gray</option>
                             <option value="White">White</option>
                             <option value="Black">Black</option>
                         </select>
-                        <br><br><button type="submit" id="addtocart7"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
+                        <br><br><button type="submit" id="addtocart7"><img src="Images/cart.png" height="30" width="30" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
             <!-- Baby Bib -->
@@ -280,7 +278,7 @@
                         <!-- Baby Bib Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -290,14 +288,14 @@
                         <!-- Baby Bib Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="Pink">Pink</option>
                             <option value="Blue">Blue</option>
                             <option value="Gray">Gray</option>
                             <option value="White">White</option>
                             <option value="Black">Black</option>
                         </select>
-                        <br><br><button type="submit" id="addtocart8"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
+                        <br><br><button type="submit" id="addtocart8"><img src="Images/cart.png" height="30" width="30" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
             <!-- Keychain -->
@@ -307,7 +305,7 @@
                         <!-- Keychain Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -317,14 +315,14 @@
                         <!-- Keychain Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="Pink">Pink</option>
                             <option value="Blue">Blue</option>
                             <option value="Gray">Gray</option>
                             <option value="White">White</option>
                             <option value="Black">Black</option>
                         </select>
-                        <br><br><button type="submit" id="addtocart9"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
+                        <br><br><button type="submit" id="addtocart9"><img src="Images/cart.png" height="30" width="30" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
             <!-- Watch -->
@@ -334,7 +332,7 @@
                         <!-- Watch Quantity selection-->
                         Quantity
                         <select class="quantity" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
@@ -344,14 +342,14 @@
                         <!-- Watch Color selection-->
                         &nbsp; Color
                         <select class="color" size="1">
-                            <option value="0"></option>
+                            <option value="0">0</option>
                             <option value="Pink">Pink</option>
                             <option value="Blue">Blue</option>
                             <option value="Gray">Gray</option>
                             <option value="White">White</option>
                             <option value="Black">Black</option>
                         </select>
-                        <br><br><button type="submit" id="addtocart10"><img src="Images/cart.png" height="30px" width="30px" alt="Cart"> Add to Cart</button>
+                        <br><br><button type="submit" id="addtocart10"><img src="Images/cart.png" height="30" width="30" alt="Cart"> Add to Cart</button>
                 </div>
             </div>
             <a href="/Thankyou.html">
