--- a/footer.html
+++ b/footer.html
@@ -47,7 +47,7 @@
       </div>
 
       <!-- copy right -->
-      <div style="clear: left; position: absolute; top: 85%">
+      <div style="clear: left; top: 85%">
         <p style="color: rgba(255, 255, 255, 0.649)">
           Copyright &copy; 2022 Save Canada Org. <br>
           <!-- <a
