--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,11 @@
 <body>
     <!-- header -->
     <div class="navclass"></div>
-      <main>
-        <div id="heading">
+<main>
     <h1>CONTACT US</h1>
-    <img src="images/contact/heading.jpg" alt=""></div>
-    <p>Thanks for dropping by! Whether you have a question, a comment or a suggestion to share, we look forward to hearing from you.</p>
+    <div id="column">
+    <div id="box">
+    <p>Thanks for dropping by! Whether you have a question, a comment or a suggestion to share, <br> we look forward to hearing from you.</p>
     <div class="contactform">
     <form action="confirmation.html" method="get">
       <div>
@@ -68,10 +68,18 @@
           <input type="button" name= "btnReset" id="reset_form" value="Reset" />
         </div>
     </form>
+  </div>
+  </div>
+  <div id="side">
+  <img src="/Images/contact/phone.png" alt="phone icon">
+  <p>Call: <b>647-504-1345</b> <br> MON - FRI, 8AM - 6PM EST </p>
+  <img src="/Images/contact/address.png" alt="address icon">
+  <p>CanSave <br>1468 Abbs Avenue <br>Toronto, ON</p></div></div>
 </main>
  <!-- content ends -->
     <!-- footer -->
     <div class="footerclass"></div>
+    <!-- Java Script -->
     <script src="script/contact.js"></script>
   </body>
 </html>
