--- a/confirmation.html
+++ b/confirmation.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Registration</title>
+    <title>Thankyou for Contacting!</title>
     <link rel="stylesheet" href="CSS/contact.css" />
   </head>
 
