--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     <div id="box">
     <p>Thanks for dropping by! Whether you have a question, a comment or a suggestion to share, <br> we look forward to hearing from you.</p>
     <div class="contactform">
-    <form action="confirmation.html" method="get">
+    <form action="process.html" method="get">
       <div>
         <label for="name">Your First Name</label>
         <input type="text" name="fname" id="fname"/>
