--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
       content="Canada is one of the major desination of animals 
       due to its wide spread area and climate. Every life is important 
       in the world , so it is our sole responsibility to protect them 
-      from getting extincted and make sure their ."
+      from getting extincted and make sure their survival."
     />
     <meta
       name="keywords"
